resolve dead lock